--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://npmcdn.com/colcade@0/colcade.js"></script>
+    <script src="../src/Page/script.js"></script>
   </body>
 </html>
